<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tudalex.fingerprint.gui.MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/facts_list" android:title="@string/fact"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/context_list" android:title="@string/contexts"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/enforce" android:title="@string/enforce"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/update_policy" android:title="@string/update_policy"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/refresh" android:title="@string/refresh"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
